[gd_scene load_steps=4 format=3 uid="uid://74ccwirwx4id"]

[ext_resource type="Script" uid="uid://cisg0h83ahy73" path="res://scripts/window_people.gd" id="1_s5e5p"]
[ext_resource type="Texture2D" uid="uid://bgrxnt7l2c0wn" path="res://assets/level/espionD.png" id="2_m1dyd"]
[ext_resource type="Texture2D" uid="uid://b1qxqo5a7kq1i" path="res://assets/level/espionG.png" id="3_q7jic"]

[node name="WindowPeople" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_s5e5p")

[node name="SpyR" type="Sprite2D" parent="."]
texture = ExtResource("2_m1dyd")
offset = Vector2(-36, -72)

[node name="SpyL" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_q7jic")
offset = Vector2(-36, -72)
